--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,13 @@
 .title-image{
   width: 60%;
   transform: rotate(25deg);
+  position:absolute;
 }
 #features{
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
+  z-index: 1;
 }
 
 .feature-box{
@@ -63,4 +67,48 @@ font-style: normal;
 .presslogo{
  width: 15%;
  margin: 20px 20px 50px; 
+}
+.col-lg-3{
+  padding: 1%;
+  width: 1800%;
+}
+#pricing{
+  padding: 80px;
+} 
+.sex{
+  padding-bottom: 20%;
+}
+
+
+
+@media (max-width:1028px){
+#title{
+  text-align: center;
+}
+
+  .title-image{
+    position: static;
+    transform:rotate(0);
+}
+}
+#cta{
+  background-color:#ff4c68 ;
+  color:#fff;
+  padding: 7% 15%;
+  text-align: center;
+}
+.cta-heading{
+ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+ font-size: 3.1rem;
+ line-height: 1.3;
+}
+#footer{
+
+  text-align: center;
+  padding:4% 10%;
+  color: black;
+  line-height:1;
+}
+.sm{
+  margin: 20px 10px;
 }
